
Thu Mar 7 17:19:44 CET 2002 Paolo Molaro <lupus@ximian.com>

	* configure.in: detect Boehm GC libs and add --with-gc switch.
	Boehm GC needs to be explicitly enabled since the JIT currently fails
	in some cases with it.

2002-02-27  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/fib.cs: it is now possible to pass a repeat count as
	command line argument, for example fib.exe 20 runs the test 20
	times. 

2002-02-25  Sergey Chaban  <serge@wildwestsoftware.com>
	* configure.in: added support for ARM target arch.
	Uncommented and modified arm-*-linux* target,
	added mono/arch/arm/Makefile to AC_OUTPUT list.

2002-02-21  Mark Crichton  <crichton@gimp.org>

	* status/class.xml: Added contact info for RNGCryptoServiceProvider
	class and Rijndael classes.
	* status/maintainers.xml: Added contact info to maintainers list.

2002-02-21  Mark Crichton  <crichton@gimp.org>
 
        * configure.in: Add checks for a system-provided entropy device
        * acconfig.h: Added HAVE_CRYPT_RNG and NAME_DEV_RANDOM

2002-02-20  Dick Porter  <dick@ximian.com>

	* acconfig.h:
	* configure.in: Always build without cygwin support on windows

2002-02-19  Radek Doulik  <rodo@ximian.com>

	* mono/tests/pinvoke.cs: use more pinvoke test methods

2002-02-19  Radek Doulik  <rodo@ximian.com>

	* mono/tests/libtest.c (mono_test_many_short_arguments): new test
	method
	(mono_test_many_byte_arguments): ditto

2002-02-18  Radek Doulik  <rodo@ximian.com>

	* mono/tests/Makefile.am: added small test library for pinvoke
	testing

	* mono/tests/libtest.c (mono_test_many_int_arguments): new file,
	new function to test pinvoke

	* mono/tests/pinvoke.cs (Test): added pinvoked method with 10 int
	arguments

	* mono/tests/Makefile.am: display # of passing tests too
	added simple shared library libtest with testing function for
	pinvoke

2002-02-17  Radek Doulik  <rodo@ximian.com>

	* mono/tests/Makefile.am (test): display # of failed tests

2002-02-16  Jeffrey Stedfast  <fejj@ximian.com>
