@@ -1,2 +1,9 @@
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = mono doc runtime scripts man
+
+if USE_INCLUDED_BOEHM
+GCDIR = libgc
+else 
+GCDIR =
+endif
+
+SUBDIRS = $(GCDIR) mono doc runtime scripts man 
