@@ -13,3 +13,4 @@
 #undef NAME_DEV_RANDOM
 #undef HAVE_CRYPT_RNG
 #undef HAVE_BOEHM_GC
+#undef USE_INCLUDED_BOEHM
